src/objects/Apttus_Billing__WalletDrawdown__c.object
<CustomObject>
    <description>This object stores the payment transaction history of wallet linked with asset line item and Billing schedules</description>
    <fields>
        <fullName>Apttus_Billing__Amount__c</fullName>
        <description>Amount consumed from the wallet. If Amount is negative that Wallet will be credited.</description>
        <inlineHelpText>Amount consumed from the wallet</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to asset line item.  This links the drawdown to the asset line item that consumes from the wallet.</description>
        <inlineHelpText>This links the drawdown to the asset line item that consumes from the wallet.</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Wallet Drawdown (Asset Line Item)</relationshipLabel>
        <relationshipName>WalletDrawdownAssetLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Backout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the drawdown is backed out due to ABO actions</description>
        <inlineHelpText>Flag to indicate if the drawdown is backed out due to ABO actions</inlineHelpText>
        <label>Backout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingScheduleId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to corresponding Billing Schedule. There can be multiple drawdown records for Same billing Schedule Id.</description>
        <inlineHelpText>Lookup to corresponding Billing Schedule.</inlineHelpText>
        <label>Billing Schedule</label>
        <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
        <relationshipLabel>Wallet Drawdown</relationshipLabel>
        <relationshipName>WalletDrawdown</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__WalletId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to corresponding wallet Asset Line Item. This links the drawdown to the wallet from where it is being consumed.</description>
        <inlineHelpText>Lookup to corresponding wallet Asset Line Item.</inlineHelpText>
        <label>Wallet</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Wallet Drawdown (Wallet)</relationshipLabel>
        <relationshipName>WalletDrawdownWallet</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Wallet Drawdown</label>
    <nameField>
        <displayFormat>WD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wallet Drawdowns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>